// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`estimated fee info scanner should match snapshot of estimated fee 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
        testID="text_fee_label"
      >
        Estimated fee
      </Text>
    </View>
  </View>
  <View
    style={{}}
  >
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
      testID="text_fee"
    >
      100
    </Text>
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
      testID="text_fee_suffix"
    >
      DFI
    </Text>
  </View>
</View>
`;

exports[`estimated fee info scanner should match snapshot of vault fee 1`] = `
<View
  style={
    [
      {},
      {},
    ]
  }
>
  <View
    style={{}}
  >
    <View
      style={{}}
    >
      <Text
        style={
          [
            {},
            [
              {},
              {},
            ],
          ]
        }
        testID="text_fee_label"
      >
        Vault fee
      </Text>
    </View>
  </View>
  <View
    style={{}}
  >
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
      testID="text_fee"
    >
      100
    </Text>
    <Text
      style={
        [
          {},
          [
            {},
            {},
          ],
        ]
      }
      testID="text_fee_suffix"
    >
      DFI
    </Text>
  </View>
</View>
`;
